@@ -22,9 +22,6 @@
  */
 
  // key: compiler.err.import.module.not.found
- // key: compiler.note.preview.filename
- // key: compiler.note.preview.recompile
- // options: --release ${jdk.version} --enable-preview
 
 import module unknown;
 
